--- a/v002.1/master.css
+++ b/v002.1/master.css
@@ -7,6 +7,14 @@ body{
 	background-color:blue;
 	background-image:url("background250.svg");
 }
+a{
+	text-decoration: underline;
+	cursor:pointer;
+	color:blue;
+}
+a:hover{
+	color:red;
+}
 .bloco{
   position: absolute;
   padding: 3px;
@@ -31,6 +39,7 @@ nav{
 	min-width:50px;
 }
 menu-base{
+	background-color: rgba(255,255,255,0.5);
 	position:fixed;
 	right:20px;
 	top:3px;
